Fixed Alignment on Safari

--- a/style.css
+++ b/style.css
@@ -19,10 +19,10 @@ h3, h4, h5, h6, p, li{
     padding: 10px;
 }
 
-img {
+.project-box img{
     max-height: 400px;
-    max-width: 93%;
-    margin: 10px 20px;
+    max-width: 100%;
+    padding: 20px 10px;
 }
 
 header {
@@ -35,10 +35,12 @@ header {
 }
 
 main {
-    padding: 10px;
+    padding: 3.5%;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
     background-color: lightgray;
 }
 
@@ -46,17 +48,22 @@ main {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
+    overflow: hidden;
+    align-content: center;
     justify-content: center;
-    max-width: 100%;
 }
 
 @media screen and (max-width: 720px){
-    img {
-        margin: 20px 0px;
+    .project-box img {
+        padding: 20px 0px;
+        max-width: 100%;
+    }
+
+    .project-box {
         max-width: 100%;
     }
 
     main {
-        padding: 0;
+        padding: 10px 0;
     }
 }
